fix maven configuration and commented out the LSP stuff